--- a/SchoolMedicalWpf.App/Parent/ParentMainWindow.xaml
+++ b/SchoolMedicalWpf.App/Parent/ParentMainWindow.xaml
@@ -2,7 +2,7 @@
        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
        Title="Phụ huynh - Health Care System" 
-       WindowState="Normal"
+       WindowState="Maximized"
        Background="{DynamicResource SecondaryGreenBrush}"
        WindowStartupLocation="CenterScreen">
     <Window.Resources>
@@ -41,13 +41,13 @@
             <Button Style="{StaticResource SidebarButtonStyle}" Tag="Health" Click="SidebarButton_Click" Margin="0,0,0,30">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
                     <Image Source="/Assets/heart.png" Width="32" Height="32"/>
-                    <TextBlock Text="Sức khỏe" FontSize="12" Foreground="White" TextAlignment="Center"/>
+                    <TextBlock Text="Khai báo sức khỏe" FontSize="12" Foreground="White" TextAlignment="Center"/>
                 </StackPanel>
             </Button>
             <Button Style="{StaticResource SidebarButtonStyle}" Tag="Exam" Click="SidebarButton_Click" Margin="0,0,0,30">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
                     <Image Source="/Assets/checkup.png" Width="32" Height="32"/>
-                    <TextBlock Text="Khám bệnh" FontSize="12" Foreground="White" TextAlignment="Center"/>
+                    <TextBlock Text="Lịch sử sức khỏe" FontSize="12" Foreground="White" TextAlignment="Center"/>
                 </StackPanel>
             </Button>
             <Button Style="{StaticResource SidebarButtonStyle}" Tag="Notification" Click="SidebarButton_Click">
