--- a/SchoolMedicalWpf.App/Parent/ParentProfilePage.xaml
+++ b/SchoolMedicalWpf.App/Parent/ParentProfilePage.xaml
@@ -1,31 +1,28 @@
 ﻿<UserControl x:Class="SchoolMedicalWpf.App.Parent.ParentProfilePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Background="Transparent">
+   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+   Background="Transparent">
     <Grid>
         <StackPanel x:Name="ViewPanel" Visibility="Visible"
-                    HorizontalAlignment="Center" VerticalAlignment="Center">
+                   HorizontalAlignment="Center" VerticalAlignment="Center">
             <Border Margin="32" Padding="64" CornerRadius="24"
-                    Background="White" 
-                    BorderBrush="#2D9CDB" BorderThickness="2"
-                    Effect="{DynamicResource CardShadow}"
-                    Width="720" MaxWidth="900">
+                   Background="White" 
+                   BorderBrush="#2D9CDB" BorderThickness="2"
+                   Effect="{DynamicResource CardShadow}"
+                   Width="720" MaxWidth="900">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="Auto">
                     <!-- Avatar -->
-                    <Border Width="140" Height="140" CornerRadius="70"
-                            BorderBrush="#2D9CDB" BorderThickness="2"
-                            HorizontalAlignment="Center" VerticalAlignment="Center"
-                            Margin="0,0,0,24">
-                        <Image x:Name="AvatarUrl" Source="pack://application:,,,/Assets/avatar.png"
-                               Width="130" Height="130" Stretch="UniformToFill"
-                               ClipToBounds="True"/>
-                    </Border>
+                    <Ellipse Width="140" Height="140" Stroke="#2D9CDB" StrokeThickness="2" Margin="0,0,0,24" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <Ellipse.Fill>
+                            <ImageBrush x:Name="AvatarUrl" ImageSource="pack://application:,,,/Assets/avatar.png" Stretch="UniformToFill"/>
+                        </Ellipse.Fill>
+                    </Ellipse>
                     <!-- Buttons -->
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,28">
                         <Button x:Name="UpdateInformationButton" Content="Sửa thông tin" Width="160" Height="44" Margin="0,0,16,0"
-                                Style="{StaticResource PrimaryButton}" Click="UpdateInformationButton_Click" />
-                        <Button Content="Đổi mật khẩu" Width="160" Height="44"
-                                Style="{StaticResource SecondaryButtonStyle}" Click="Button_Click"/>
+                               Style="{StaticResource PrimaryButton}" Click="UpdateInformationButton_Click" />
+                        <Button x:Name="ChangePasswordButton" Content="Đổi mật khẩu" Width="160" Height="44"
+                               Style="{StaticResource SecondaryButtonStyle}" Click="ChangePasswordButton_Click"/>
                     </StackPanel>
                     <Grid HorizontalAlignment="Center" Margin="0,0,0,0">
                         <Grid.RowDefinitions>
@@ -55,10 +52,10 @@
         </StackPanel>
 
         <Border x:Name="EditPanel" Visibility="Collapsed"
-        Background="White" CornerRadius="16"
-        BorderBrush="#2D9CDB" BorderThickness="1"
-        Padding="40" Width="700" MaxWidth="900"
-        HorizontalAlignment="Center" VerticalAlignment="Center">
+       Background="White" CornerRadius="16"
+       BorderBrush="#2D9CDB" BorderThickness="1"
+       Padding="40" Width="700" MaxWidth="900"
+       HorizontalAlignment="Center" VerticalAlignment="Center">
             <ScrollViewer VerticalScrollBarVisibility="Auto">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -69,15 +66,14 @@
                     <!-- Bên trái: upload ảnh -->
                     <StackPanel Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Center">
                         <TextBlock Text="Ảnh đại diện" FontSize="16" FontWeight="Bold" Margin="0,0,0,18" Foreground="{StaticResource PrimaryBlueBrush}"/>
-                        <Border Width="110" Height="110" CornerRadius="55"
-                        BorderBrush="{StaticResource PrimaryBlueBrush}" BorderThickness="2" Background="#FAFAFA" HorizontalAlignment="Center">
-                            <Image x:Name="EditAvatar"
-                           Width="106" Height="106" Stretch="UniformToFill"
-                           ClipToBounds="True"/>
-                        </Border>
-                        <Button Content="Chọn ảnh..." Margin="0,18,0,0"
-                        Width="130"
-                        Style="{StaticResource SecondaryButtonStyle}"/>
+                        <Ellipse Width="110" Height="110" Stroke="{StaticResource PrimaryBlueBrush}" StrokeThickness="2">
+                            <Ellipse.Fill>
+                                <ImageBrush x:Name="EditAvatar" ImageSource="pack://application:,,,/Assets/avatar.png" Stretch="UniformToFill"/>
+                            </Ellipse.Fill>
+                        </Ellipse>
+                        <Button x:Name="ChangeAvatarButton" Content="Chọn ảnh..." Margin="0,18,0,0"
+                       Width="130"
+                       Style="{StaticResource SecondaryButtonStyle}" Click="ChangeAvatarButton_Click"/>
                     </StackPanel>
                     <!-- Spacer -->
                     <Grid Grid.Column="1"/>
@@ -94,13 +90,16 @@
                         <TextBlock Text="Địa chỉ" Style="{StaticResource LabelText}"/>
                         <TextBox x:Name="EditAddress" Style="{StaticResource InputBox}"/>
 
+                        <TextBlock Text="Email" Style="{StaticResource LabelText}"/>
+                        <TextBox x:Name="EditEmail" Style="{StaticResource InputBox}"/>
+
                         <TextBlock Text="Số điện thoại" Style="{StaticResource LabelText}"/>
                         <TextBox x:Name="EditPhoneNumber" Style="{StaticResource InputBox}"/>
 
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,28,0,0">
-                            <Button Content="Lưu" Width="110" Margin="0,0,18,0"
-                            Style="{StaticResource PrimaryButton}"/>
-                            <Button Content="Huỷ" Width="110" Style="{StaticResource SecondaryButtonStyle}"/>
+                            <Button x:Name="SaveInformationButton" Content="Lưu" Width="110" Margin="0,0,18,0"
+                           Style="{StaticResource PrimaryButton}" Click="SaveInformationButton_Click"/>
+                            <Button x:Name="CancelButton" Content="Huỷ" Width="110" Style="{StaticResource SecondaryButtonStyle}" Click="CancelButton_Click"/>
                         </StackPanel>
                     </StackPanel>
                 </Grid>
@@ -108,10 +107,10 @@
         </Border>
 
         <Border x:Name="ChangePasswordPanel" Visibility="Collapsed"
-                Background="White" CornerRadius="16"
-                BorderBrush="#2D9CDB" BorderThickness="1"
-                Padding="40" Width="600" MaxWidth="800"
-                HorizontalAlignment="Center" VerticalAlignment="Center">
+               Background="White" CornerRadius="16"
+               BorderBrush="#2D9CDB" BorderThickness="1"
+               Padding="40" Width="600" MaxWidth="800"
+               HorizontalAlignment="Center" VerticalAlignment="Center">
             <StackPanel>
                 <TextBlock Text="Đổi mật khẩu" FontSize="24" FontWeight="Bold" Margin="0,0,0,28" Foreground="{StaticResource PrimaryBlueBrush}"/>
                 <!-- Form -->
@@ -128,9 +127,9 @@
                 <PasswordBox x:Name="ConfirmedPassword" Style="{StaticResource PasswordInputBox}"/>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,28,0,0">
-                    <Button Content="Lưu" Width="110" Margin="0,0,18,0"
-                            Style="{StaticResource PrimaryButton}"/>
-                    <Button Content="Huỷ" Width="110" Style="{StaticResource SecondaryButtonStyle}"/>
+                    <Button x:Name="SaveChangePasswordButton" Content="Lưu" Width="110" Margin="0,0,18,0"
+                           Style="{StaticResource PrimaryButton}" Click="SaveChangePasswordButton_Click"/>
+                    <Button x:Name="CancelChangePasswordButton" Content="Huỷ" Width="110" Style="{StaticResource SecondaryButtonStyle}" Click="CancelChangePasswordButton_Click"/>
                 </StackPanel>
             </StackPanel>
         </Border>
