--- a/SchoolMedicalWpf.App/ProfilePage.xaml
+++ b/SchoolMedicalWpf.App/ProfilePage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SchoolMedicalWpf.App.Parent.ParentProfilePage"
+﻿<UserControl x:Class="SchoolMedicalWpf.App.ProfilePage"
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
    Background="Transparent">
