--- a/SchoolMedicalWpf.App/Parent/HealthDeclarationFormWindow.xaml
+++ b/SchoolMedicalWpf.App/Parent/HealthDeclarationFormWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SchoolMedicalWpf.App.Parent.HealthDeclarationForm"
+﻿<Window x:Class="SchoolMedicalWpf.App.Parent.HealthDeclarationFormWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Khai báo y tế" Height="540" Width="600" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" Background="#F5F6FA">
