--- a/SchoolMedicalWpf.App/Themes/SchoolMedicalTheme.xaml
+++ b/SchoolMedicalWpf.App/Themes/SchoolMedicalTheme.xaml
@@ -151,4 +151,16 @@
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
     </Style>
+
+    <Style x:Key="ComboBoxInputBox" TargetType="ComboBox">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Padding" Value="12,0"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="{StaticResource BorderGrayBrush}"/>
+        <Setter Property="Background" Value="{StaticResource BackgroundWhiteBrush}"/>
+        <Setter Property="Margin" Value="0,0,0,16"/>
+        <Setter Property="Height" Value="40"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+    </Style>
+
 </ResourceDictionary>
