Refactor namespaces and enhance medical registration
- Streamlined using directives across multiple files.
- Introduced new services for medical registration in dependency injection.
- Updated `MedicalRegistrationFormWindow` and `MedicalRegistrationHistoryPage` to use dependency injection.
- Added `MedicalRegistrationService` and `MedicalRegistrationRepo` for managing medical registrations.
- Introduced `StudentDto` for structured data transfer related to students.
- Enhanced `UserRepository` and `StudentRepository` with new retrieval methods.
- Overall refactoring improves application structure and maintainability.

--- a/SchoolMedicalWpf.App/Parent/MedicalRegistrationFormWindow.xaml
+++ b/SchoolMedicalWpf.App/Parent/MedicalRegistrationFormWindow.xaml
@@ -4,7 +4,7 @@
         Title="Đăng ký lịch sử tiêm thuốc"
         Height="790" Width="680"
         Background="{DynamicResource BackgroundWhiteBrush}"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Grid>
         <Border Style="{StaticResource CardContainer}" 
                 HorizontalAlignment="Center" VerticalAlignment="Center"
