--- a/SchoolMedicalWpf.App/Parent/MedicalRegistrationHistoryPage.xaml
+++ b/SchoolMedicalWpf.App/Parent/MedicalRegistrationHistoryPage.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="SchoolMedicalWpf.App.Parent.MedicalRegistrationHistoryPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             MinHeight="400" MinWidth="700">
+             MinHeight="400" MinWidth="700" Loaded="UserControl_Loaded">
     <Grid Margin="32">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
