--- a/SchoolMedicalWpf.App/Parent/HealthCheckHistory.xaml
+++ b/SchoolMedicalWpf.App/Parent/HealthCheckHistory.xaml
@@ -1,57 +1,119 @@
 ﻿<UserControl x:Class="SchoolMedicalWpf.App.Parent.HealthCheckHistory"
-              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Background="Transparent" Loaded="UserControl_Loaded">
-    <Grid Margin="24">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             Background="{StaticResource BackgroundWhiteBrush}">
+    <Grid>
+        <!-- Header -->
+        <TextBlock x:Name="StudentHistory" Text="Health Check History"
+                   Style="{StaticResource TitleText}"
+                   Margin="32,24,0,0"
+                   HorizontalAlignment="Left"
+                   VerticalAlignment="Top"/>
 
-        <!-- Title -->
-        <TextBlock x:Name="StudentNameText"
-                   Text="Tên học sinh"
-                   FontSize="24"
-                   FontWeight="Bold"
-                   Foreground="DarkBlue"
-                   Grid.Row="0"
-                   Margin="0,0,0,16"/>
-
-        <!-- Search box -->
-        <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,0,0,16">
-            <TextBox x:Name="SearchBox"
-             Width="250"
-             Height="28"
-             VerticalAlignment="Center"
-             Margin="0,0,8,0"
-             />
-            <Button Content="Tìm kiếm"
-                    Height="28"
-                    VerticalAlignment="Center"
-                    Click="SearchButton_Click"/>
-        </StackPanel>
+        <!-- Search by Date Bar (Using Grid for alignment) -->
+        <Border Background="{StaticResource BackgroundWhiteBrush}"
+                BorderBrush="{StaticResource BorderGrayBrush}"
+                BorderThickness="1"
+                CornerRadius="8"
+                Margin="32,74,32,0"
+                Height="62"
+                VerticalAlignment="Top">
+            <Grid VerticalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="160"/>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="160"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="120"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="From:"
+                           Style="{StaticResource LabelText}"
+                           VerticalAlignment="Center"
+                           Margin="8,0,0,0"
+                           Grid.Column="0"/>
+                <DatePicker x:Name="FromDatePicker"
+                            Style="{StaticResource DatePickerStyle}"
+                            VerticalAlignment="Center"
+                            Margin="8,0,0,0"
+                            Grid.Column="1"/>
+                <!-- Spacer -->
+                <TextBlock Text=""
+                           Grid.Column="2"/>
+                <TextBlock Text="To:"
+                           Style="{StaticResource LabelText}"
+                           VerticalAlignment="Center"
+                           Grid.Column="3"
+                           Margin="0,0,0,0"/>
+                <DatePicker x:Name="ToDatePicker"
+                            Style="{StaticResource DatePickerStyle}"
+                            VerticalAlignment="Center"
+                            Margin="8,0,0,0"
+                            Grid.Column="4"/>
+                <!-- Empty column for stretch -->
+                <TextBlock Text=""
+                           Grid.Column="5"/>
+                <Button x:Name="SearchButton"
+                        Content="Search"
+                        Style="{StaticResource PrimaryButton}"
+                        Width="90"
+                        Height="40"
+                        Margin="12,0,12,0"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Right"
+                        Grid.Column="6"
+                        Click="SearchButton_Click"/>
+            </Grid>
+        </Border>
 
         <!-- DataGrid -->
-        <DataGrid x:Name="HealthCheckHistoryDataGrid"
-                  Grid.Row="2"
+        <DataGrid x:Name="HealthHistoryDataGrid"
+                  ItemsSource="{Binding AllResults}"
                   AutoGenerateColumns="False"
+                  Margin="32,150,32,90"
+                  Background="{StaticResource BackgroundWhiteBrush}"
+                  Foreground="{StaticResource TextGrayBrush}"
+                  BorderBrush="{StaticResource BorderGrayBrush}"
+                  RowHeaderWidth="0"
+                  HeadersVisibility="Column"
                   CanUserAddRows="False"
-                  IsReadOnly="True"
-                  SelectionMode="Single"
-                  Margin="0"
-                  ItemsSource="{Binding FilteredResults}">
+                  AlternatingRowBackground="{StaticResource AccentYellowBrush}"
+                  FontSize="15"
+                  ColumnWidth="auto">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Ngày khám" Binding="{Binding DatePerformed}" Width="120"/>
-                <DataGridTextColumn Header="Chiều cao" Binding="{Binding Height}" Width="80"/>
-                <DataGridTextColumn Header="Cân nặng" Binding="{Binding Weight}" Width="80"/>
-                <DataGridTextColumn Header="Mắt trái" Binding="{Binding VisionLeft}" Width="80"/>
-                <DataGridTextColumn Header="Mắt phải" Binding="{Binding VisionRight}" Width="80"/>
-                <DataGridTextColumn Header="Thính lực" Binding="{Binding Hearing}" Width="100"/>
-                <DataGridTextColumn Header="Mũi" Binding="{Binding Nose}" Width="80"/>
-                <DataGridTextColumn Header="Huyết áp" Binding="{Binding BloodPressure}" Width="100"/>
-                <DataGridTextColumn Header="Ghi chú" Binding="{Binding Notes}" Width="*"/>
+                <DataGridTextColumn Header="Date" Width="100" Binding="{Binding DatePerformed}" />
+                <DataGridTextColumn Header="Height" Width="80" Binding="{Binding Height}" />
+                <DataGridTextColumn Header="Weight" Width="80" Binding="{Binding Weight}" />
+                <DataGridTextColumn Header="Vision (L)" Width="80" Binding="{Binding VisionLeft}" />
+                <DataGridTextColumn Header="Vision (R)" Width="80" Binding="{Binding VisionRight}" />
+                <DataGridTextColumn Header="Hearing" Width="100" Binding="{Binding Hearing}" />
+                <DataGridTextColumn Header="Nose" Width="100" Binding="{Binding Nose}" />
+                <DataGridTextColumn Header="Blood Pressure" Width="110" Binding="{Binding BloodPressure}" />
+                <DataGridTextColumn Header="Notes" Width="*" Binding="{Binding Notes}" />
             </DataGrid.Columns>
         </DataGrid>
+
+        <!-- Buttons Panel -->
+        <StackPanel Orientation="Horizontal"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Margin="0,0,32,32">
+            <Button x:Name="DetailsButton"
+                    Content="Details"
+                    Style="{StaticResource PrimaryButton}"
+                    Width="120"
+                    Margin="10,0"
+                    Click="DetailsButton_Click"/>
+            <Button x:Name="QuitButton"
+                    Content="Quit"
+                    Style="{StaticResource SecondaryButtonStyle}"
+                    Width="120"
+                    Margin="10,0"
+                    Click="QuitButton_Click"/>
+        </StackPanel>
     </Grid>
 </UserControl>
