--- a/SchoolMedicalWpf.App/Parent/VaccinationHistory.xaml
+++ b/SchoolMedicalWpf.App/Parent/VaccinationHistory.xaml
@@ -1,58 +1,113 @@
 ﻿<UserControl x:Class="SchoolMedicalWpf.App.Parent.VaccinationHistory"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SchoolMedicalWpf.App.Parent"
-             Background="Transparent" Loaded="UserControl_Loaded">
-    <Grid Margin="24">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             Background="{StaticResource BackgroundWhiteBrush}">
+    <Grid>
+        <!-- Header -->
+        <TextBlock x:Name="StudentVaccinationHistory" Text="Vaccination History"
+                   Style="{StaticResource TitleText}"
+                   Margin="32,24,0,0"
+                   HorizontalAlignment="Left"
+                   VerticalAlignment="Top"/>
 
-        <!-- Title -->
-        <TextBlock x:Name="StudentNameText"
-                   Text="Tên học sinh"
-                   FontSize="24"
-                   FontWeight="Bold"
-                   Foreground="DarkBlue"
-                   Grid.Row="0"
-                   Margin="0,0,0,16"/>
-
-        <!-- Search box với placeholder -->
-        <Grid Grid.Row="1" Margin="0,0,0,16" Height="32" Width="260">
-            <TextBox x:Name="SearchBox"
-                     VerticalContentAlignment="Center"
-                     Padding="8,0,32,0"
-                     />
-            <Button Content="Tìm"
-                    Width="40"
-                    Height="28"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Center"
-                    Margin="0,0,2,0"
-                    Click="SearchButton_Click"/>
-        </Grid>
+        <!-- Responsive Search Bar -->
+        <Border Background="{StaticResource BackgroundWhiteBrush}"
+                BorderBrush="{StaticResource BorderGrayBrush}"
+                BorderThickness="1"
+                CornerRadius="8"
+                Margin="32,80,32,0"
+                Height="56"
+                VerticalAlignment="Top">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="180" />
+                    <ColumnDefinition Width="30" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="220" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="130" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Vaccine Name"
+                           Style="{StaticResource SubtitleText}"
+                           VerticalAlignment="Center"
+                           Margin="16,0,0,0"
+                           Grid.Column="0"/>
+                <TextBox x:Name="SearchVaccineNameTextBox"
+                         Style="{StaticResource InputBox}"
+                         Height="40"
+                         Margin="8,0,0,0"
+                         VerticalAlignment="Center"
+                         Grid.Column="1"/>
+                <TextBlock Text="Manufacturer"
+                           Style="{StaticResource SubtitleText}"
+                           VerticalAlignment="Center"
+                           Margin="8,0,0,0"
+                           Grid.Column="3"/>
+                <TextBox x:Name="SearchManufacturerTextBox"
+                         Style="{StaticResource InputBox}"
+                         Height="40"
+                         Margin="8,0,0,0"
+                         VerticalAlignment="Center"
+                         Grid.Column="4"/>
+                <Button x:Name="SearchButton"
+                        Content="Search"
+                        Style="{StaticResource PrimaryButton}"
+                        Height="40"
+                        Width="104"
+                        Margin="10,0,0,0"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Left"
+                        Grid.Column="6"
+                        Click="SearchButton_Click"/>
+            </Grid>
+        </Border>
 
         <!-- DataGrid -->
         <DataGrid x:Name="VaccinationHistoryDataGrid"
-                  Grid.Row="2"
+                  ItemsSource="{Binding AllVaccinations}"
                   AutoGenerateColumns="False"
+                  Margin="32,150,32,90"
+                  Background="{StaticResource BackgroundWhiteBrush}"
+                  Foreground="{StaticResource TextGrayBrush}"
+                  BorderBrush="{StaticResource BorderGrayBrush}"
+                  RowHeaderWidth="0"
+                  HeadersVisibility="Column"
                   CanUserAddRows="False"
-                  IsReadOnly="True"
-                  SelectionMode="Single"
-                  Margin="0"
-                  ItemsSource="{Binding FilteredResults}">
+                  AlternatingRowBackground="{StaticResource AccentYellowBrush}"
+                  FontSize="15"
+                  ColumnWidth="Auto">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Ngày tiêm" Binding="{Binding VaccinationDate}" Width="120"/>
-                <DataGridTextColumn Header="Mũi số" Binding="{Binding DoseNumber}" Width="60"/>
-                <DataGridTextColumn Header="Vị trí tiêm" Binding="{Binding InjectionSite}" Width="100"/>
-                <DataGridTextColumn Header="Phản ứng ngay" Binding="{Binding ImmediateReaction}" Width="120"/>
-                <DataGridTextColumn Header="Thời gian phản ứng" Binding="{Binding ReactionStartTime}" Width="120"/>
-                <DataGridTextColumn Header="Loại phản ứng" Binding="{Binding ReactionType}" Width="120"/>
-                <DataGridTextColumn Header="Mức độ" Binding="{Binding SeverityLevel}" Width="80"/>
-                <DataGridTextColumn Header="Ghi chú" Binding="{Binding Notes}" Width="*"/>
+                <DataGridTextColumn Header="Date" Width="100" Binding="{Binding DateAdministered}" />
+                <DataGridTextColumn Header="Vaccine Name" Width="140" Binding="{Binding VaccineName}" />
+                <DataGridTextColumn Header="Dose" Width="70" Binding="{Binding DoseNumber}" />
+                <DataGridTextColumn Header="Manufacturer" Width="120" Binding="{Binding Manufacturer}" />
+                <DataGridTextColumn Header="Lot Number" Width="120" Binding="{Binding LotNumber}" />
+                <DataGridTextColumn Header="Location" Width="120" Binding="{Binding Location}" />
+                <DataGridTextColumn Header="Notes" Width="*" Binding="{Binding Notes}" />
             </DataGrid.Columns>
         </DataGrid>
+
+        <!-- Buttons Panel -->
+        <StackPanel Orientation="Horizontal"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Margin="0,0,32,32">
+            <Button x:Name="DetailsButton"
+                    Content="Details"
+                    Style="{StaticResource PrimaryButton}"
+                    Width="120"
+                    Margin="10,0"
+                    Click="DetailsButton_Click"/>
+            <Button x:Name="QuitButton"
+                    Content="Quit"
+                    Style="{StaticResource SecondaryButtonStyle}"
+                    Width="120"
+                    Margin="10,0"
+                    Click="QuitButton_Click"/>
+        </StackPanel>
     </Grid>
 </UserControl>
